# fubumio

./: README.md  pyproject.toml
src/fubumio/: __init__.py  axes.py  color.py  colors.py  export.py  layouts.py  options.py  palette.py  palettes.py  style.py
tests/: test_fubumio.py
