[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "fubumio"
version = "0.1.0"
description = "Small, opinionated matplotlib colors, styles, and cleanup helpers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "leogabac" }]
dependencies = ["matplotlib>=3.7"]
keywords = ["matplotlib", "plotting", "style", "colors"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.urls]
Homepage = "https://github.com/leogabac/fubumio"
Issues = "https://github.com/leogabac/fubumio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fubumio"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
